Bug 310679 - shortcut for toggling touch only works when kcm is open
Summary: shortcut for toggling touch only works when kcm is open
Status: RESOLVED FIXED
Alias: None
Product: wacomtablet
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.3.7
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Jörg Ehrichs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-25 21:39 UTC by Anders Lund
Modified: 2013-01-22 11:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2012-11-25 21:39:56 UTC
I set a shortcut for toggling the touch feature of my wacom bamboo, but it only works while the wacom kcm is open. It does not have to be in the foreground, but when I shut down systemsettings, the shortcut stops working.

Also, the setting isn't sticky, so if i disable touch and replugs the tablet, touch is enabled again.

Reproducible: Always
Comment 1 Anders Lund 2012-11-26 14:36:08 UTC
Trying the git version, the shortcut can be used without launching the kcm, 
but the state is not remembered when the device is replugged.
Comment 2 Jörg Ehrichs 2013-01-22 11:07:48 UTC
Git commit f06b16f64a974c0f5371ba336a6fe300d39b4503 by Jörg Ehrichs.
Committed on 22/01/2013 at 12:05.
Pushed by jehrichs into branch 'master'.

Save touch/pen mode into profile after using the hotkey

The tablet will save the state for touch on/off and stylus/eraser
absolute/relative mode in the profile when the global hotkey that
changes this are used.

M  +22   -0    src/kded/tablethandler.cpp

http://commits.kde.org/wacomtablet/f06b16f64a974c0f5371ba336a6fe300d39b4503