Save touch/pen mode into profile after using the hotkey

The tablet will save the state for touch on/off and stylus/eraser
absolute/relative mode in the profile when the global hotkey that
changes this are used.

BUG: 310679